--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,10 +8,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+    <div class="musica-cta-area section-padding-100 mt-100 bg-img bg-overlay2" th:style="'background-image: url(img/core-img/index2.jpg);'">
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
                 
             <a class="navbar-brand" href="/index2">
-                <img src="Images/logo.png" width="30" height="30" alt="">
+                <img src="img/core-img/logo.jpg" width="30" height="30" alt="">
               </a>
               <a class="navbar-brand" href="/index2">Basketbuzz</a>
               
