--- a/src/main/resources/templates/teaminfo.html
+++ b/src/main/resources/templates/teaminfo.html
@@ -6,12 +6,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-        <div class="musica-cta-area section-padding-100 mt-100 bg-img bg-overlay2" th:style="'background-image: url(img/core-img/team1.jpg);'">
+        <div class="musica-cta-area section-padding-100 mt-100 bg-img bg-overlay2" th:style="'background-image: url(img/core-img/teams.jpg);'">
     
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
                 
                 <a class="navbar-brand" href="/index2">
-                    <img src="Images/logo.png" width="30" height="30" alt="">
+                    <img src="img/core-img/logo.jpg" width="30" height="30" alt="">
                   </a>
                   <a class="navbar-brand" href="/index2">Basketbuzz</a>
                   
@@ -52,16 +52,14 @@
     </tr>
   </thead>
     	<tr th:each="gameDetail,iterStat : ${gameDetails}" >
-         <td th:text="${gameDetail.get('homeTeam')}" >  </td>
-        <td th:text="${gameDetail.get('awayTeam')}" >  </td>
-        <!-- <td> <a th:href="@{~/schedules?id=} + ${gameDetail.get('homeID')}" th:text="${gameDetail.get('homeTeam')}"></a> </td>
-        <td> <a th:href="@{~/schedules?id=} + ${gameDetail.get('awayID')}" th:text="${gameDetail.get('awayTeam')}"></a> </td> -->
-     		<td th:text="${gameDetail.get('date')}">  </td>
-            <td th:text="${gameDetail.get('time')}">  </td>
-            <td th:text="${gameDetail.get('location')}">  </td>
-            <td th:text="${gameDetail.get('wins')}">  </td>
-            <td th:text="${gameDetail.get('losses')}">  </td>
-            <td th:text="${gameDetail.get('winpct')}">  </td>
+          <td style="font-weight:bold" th:text="${gameDetail.get('homeTeam')}" >  </td>
+          <td style="font-weight:bold" th:text="${gameDetail.get('awayTeam')}" >  </td>
+     		<td style="font-weight:bold" th:text="${gameDetail.get('date')}">  </td>
+            <td style="font-weight:bold" th:text="${gameDetail.get('time')}">  </td>
+            <td style="font-weight:bold" th:text="${gameDetail.get('location')}">  </td>
+            <td style="font-weight:bold" th:text="${gameDetail.get('wins')}">  </td>
+            <td style="font-weight:bold" th:text="${gameDetail.get('losses')}">  </td>
+            <td style="font-weight:bold" th:text="${gameDetail.get('winpct')}">  </td>
 
   			
   		</tr>
