--- a/src/main/resources/templates/teaminfo.html
+++ b/src/main/resources/templates/teaminfo.html
@@ -34,7 +34,7 @@
                       </div>
                                                  
                     </nav>
-                    <p th:text="'Hello, ' + ${name} + 'Please Click on the Select favourite Teams tab in the Navigation bar and select this team from the drop down to add it in your favourite list!'" />
+                    <p th:text="'Hello, ' + ${name} + ' This is the list of Previous Wins and Losses of the current clicked team'" />
                     <div class="container">
                     <table class="table table-striped">
                 <thead>
