--- a/src/main/resources/templates/loginIndex.html
+++ b/src/main/resources/templates/loginIndex.html
@@ -4,25 +4,6 @@
     <title>Login</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <style>
-        body, html {
-            height: 100%;
-            margin: 0;
-        }
-        
-        .bg {
-            /* The image used */
-            background-image: url(img/home.img/core-img/compact-disc.png);
-        
-            /* Full height */
-            height: 100%; 
-        
-            /* Center and scale the image nicely */
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-        </style>
 </head>
 <body>
     <div class="musica-cta-area section-padding-100 mt-100 bg-img bg-overlay2" th:style="'background-image: url(img/core-img/facebook.jpg);'">
@@ -39,7 +20,18 @@
                 </div>
               </div>
                                          
-            </nav> 
+            </nav>
+
+            <div id="fb-root"></div>
+            <script>(function(d, s, id) {
+              var js, fjs = d.getElementsByTagName(s)[0];
+              if (d.getElementById(id)) return;
+              js = d.createElement(s); js.id = id;
+              js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2&appId=493227764520346&autoLogAppEvents=1';
+              fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));</script>
+
+
 <script>
   // This is called with the results from from FB.getLoginStatus().
   function statusChangeCallback(response) {
@@ -104,14 +96,15 @@
 <!-- <fb:login-button  scope="public_profile,email" onlogin="checkLoginState();">
  </fb:login-button> -->
 <!-- <div style="width:800px; margin:0 auto;"> -->
-    <div class="musica-cta-area section-padding-100 mt-100 bg-img bg-overlay2" th:style="'background-image: url(img/core-img/facebook1 .jpg);'">
-    <div align="center">
+<div class="musica-cta-area section-padding-100 mt-100 bg-img bg-overlay2" th:style="'background-image: url(img/core-img/facebook1 .jpg);'">
+<div align="center">
 <div class="fb-login-button" scope="public_profile,email" onlogin="checkLoginState();" data-max-rows="1" data-size="large" data-button-type="continue_with"
  data-show-faces="false" data-auto-logout-link="true" data-use-continue-as="false"></div>
 <div id="status">
 </div>
 </div>
 </div>
+
 
 <form th:action ="@{~/fblogin}" method = "post" id="loginForm">
 <input type = "hidden" name="userID" id="userID" />
