--- a/src/main/resources/templates/logoutindex.html
+++ b/src/main/resources/templates/logoutindex.html
@@ -21,6 +21,16 @@
               </div>
                                          
             </nav> 
+
+            <div id="fb-root"></div>
+            <script>(function(d, s, id) {
+              var js, fjs = d.getElementsByTagName(s)[0];
+              if (d.getElementById(id)) return;
+              js = d.createElement(s); js.id = id;
+              js.src = 'https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v3.2&appId=493635834466966&autoLogAppEvents=1';
+              fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));</script> 
+            
 <script>
   // This is called with the results from from FB.getLoginStatus().
   function statusChangeCallback(response) {
@@ -31,8 +41,8 @@
       testAPI();
     } else {
       // The person is not logged into your app or we are unable to tell.
-      document.getElementById('status').innerHTML = 'Please Click the logo ' +
-        'to continue logging in again.';
+      document.getElementById('status').innerHTML = '>>>> Please Click the logo ' +
+        'to continue logging in again <<<<';
     }
   }
 
@@ -91,6 +101,7 @@
 <div id="status">
 </div>
 </div>
+
 
 
  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
